--- a/app/views/orders/confirm.html.erb
+++ b/app/views/orders/confirm.html.erb
@@ -103,7 +103,6 @@
       <% @order.basket.basket_items.includes(:product).each do |item| %>
         <div class="item-card">
           <p><%= item.quantity %> x <%= item.product.name %></p>
-          <textarea placeholder="Enter pharmacy name"></textarea>
         </div>
       <% end %>
     </div>
@@ -115,7 +114,7 @@
     <div class="footer">
       <p>You'll receive another email with tracking details once your order ships.</p>
       <p>Thank you for shopping with us!<br>— The MedFly Team</p>
-      <%= link_to "My Account", my_account_path, class: "btn-primary text-decoration-none" %>
+      <%= link_to "Manage Order", orders_path, class: "btn-primary text-decoration-none" %>
     </div>
   </div>
 </body>
