--- a/app/assets/stylesheets/pharmacies_index.scss
+++ b/app/assets/stylesheets/pharmacies_index.scss
@@ -10,6 +10,7 @@
 
 /* Grid container */
 .pharmacy-grid {
+  background-color: #f0f8ff;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -35,7 +36,6 @@
   transition: transform 0.2s ease-in-out;
   display: flex;
   flex-direction: column;
-  border: 1px solid #e3e7ee;
 }
 
 .pharmacy-card:hover {
