--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -15,4 +15,5 @@
 
 @import "pharmacies_index";
 @import "modal";
-@import "components/bottom-navbar"
+@import "components/bottom-navbar";
+@import "components/topheader";
