--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -4,77 +4,21 @@
 html, body {
   margin: 0;
   padding: 0;
+  background-color: #f0f8ff;
 }
 
-.top-header {
-  position: fixed;
-  top: 0; left: 0;
-  width: 100%;
-  height: 200px;
-//   background: transparent;
-// //   background: linear-gradient(to top,#d4e1e4, #93e7fa);
-  background: linear-gradient(to top,#d4e1e4, #f9fca6);
-  box-shadow: 0 4px 15px rgba(0, 68, 102, 0.25);
-  z-index: 1000;
-  user-select: none;
-  transition: transform 0.3s ease, opacity 0.3s ease;
-}
-
-.top-header.hide-header {
-  transform: translateY(-100%);
-  opacity: 0;
-  pointer-events: none;
-  transition: transform 0.3s ease, opacity 0.3s ease;
-}
-
-.app-title-container {
-  display: flex;
-  align-items: center;
-  position: relative;
-  height: 60px;
-}
-
-.medfly-logo {
-  width: 50px;
-  height: 50px;
-  border-radius: 12px;
-  object-fit: cover;
-  margin-left: 8px;
-  margin-top: 6px; /* shifts the logo slightly down */
-}
-
-.app-name {
-  position: absolute;
-  left: 45%; /* move slightly left from center */
-  top: 20px;
-  transform: translateX(-50%);
-  font-family: "Cookie", cursive;
-  font-weight: 500;
-  font-size: 55px;
-  font-style: italic;
-  margin: 0;
-  color: #004466;
-  letter-spacing: 1px;
-  text-shadow: 0 1px 2px rgba(255,255,255,0.7);
-  white-space: nowrap;
-  line-height: 60px;
-  background: transparent;
-  z-index: 1000;
-  user-select: none;
-}
-
-.user-icon {
-  background: #f6d9d9;
-  border-radius: 50%;
-  border: 2px dashed #ccc;
-  display: inline-block;
-  position: fixed;
-  top: 20px;
-  right: 20px;
-  width: 55px;
-  height: 55px;
-  z-index: 1100;
-}
+// .user-icon {
+//   background: #f6d9d9;
+//   border-radius: 50%;
+//   border: 2px dashed #ccc;
+//   display: inline-block;
+//   position: fixed;
+//   top: 20px;
+//   right: 20px;
+//   width: 55px;
+//   height: 55px;
+//   z-index: 1100;
+// }
 
 .hero {
   background: transparent;
@@ -100,15 +44,9 @@ html, body {
   border: 1px solid #ccc;
   overflow: hidden;
   position: relative;
-  top: 45px;
+  top: 30px;
   min-height: 60px;
   transition: box-shadow 0.3s ease;
-}
-
-.filter-button{
-    position: absolute;
-    right: 15px;
-    top: 50px;
 }
 
 .search-input::placeholder {
@@ -189,7 +127,9 @@ html, body {
 .carousel-inner {
   width: 100%;
 }
-
+.carousel slide{
+  background-color: #f0f8ff;
+}
 .carousel-inner img {
   width: 100%;
   height: auto;
@@ -221,7 +161,7 @@ html, body {
   padding-bottom: 70px; /* height of the fixed bottom navbar */
   padding-top: 2rem; /* adjust the value to move content down */
   overflow-y: auto;
-  background: linear-gradient(0deg, rgb(132, 154, 161) 0%, rgb(229, 218, 218) 100%);
+  background-color: #f0f8ff;
 //   background: linear-gradient(to top,#85a0a5, #d4e1e4);
   text-align: center;
   box-sizing: border-box;
@@ -245,7 +185,7 @@ html, body {
 }
 
 .health-card {
-  background: linear-gradient(to top, #d4e1e4, #f9fca6);
+  background-color: #f0f8ff;
   border-radius: 20px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
   width: 90vw;
@@ -278,5 +218,5 @@ html, body {
 
 .top-to-carousel-spacer {
   height: 200px;
-  background:linear-gradient(0deg, rgb(143, 155, 159) 0%, rgb(159, 147, 147) 100%);
+  background-color: #f0f8ff;
 }
