--- a/app/views/baskets/show.html.erb
+++ b/app/views/baskets/show.html.erb
@@ -5,7 +5,7 @@
   <style>
     body {
       font-family: 'Roboto', sans-serif;
-      background-color: #f9fafb;
+      background-color: #f0f8ff;
       margin: 0;
       padding: 20px;
     }
