--- a/app/views/users/account.html.erb
+++ b/app/views/users/account.html.erb
@@ -8,7 +8,7 @@
   <style>
     body {
       font-family: system-ui, sans-serif;
-      background-color: #f4f4f4;
+      background-color: #f0f8ff;
       margin: 0;
       padding: 0;
     }
@@ -16,7 +16,7 @@
     .container {
       max-width: 480px;
       margin: 0 auto;
-      background-color: #fff;
+      background-color: #f0f8ff;
       padding: 2rem 1.5rem;
       min-height: 100vh;
     }
