--- a/app/assets/stylesheets/components/_topheader.scss
+++ b/app/assets/stylesheets/components/_topheader.scss
@@ -3,7 +3,7 @@
   top: 0; left: 0;
   width: 100%;
   height: 70px;
-  background-color: #f0f8ff;
+   background-color: #e6f0ff;;
   z-index: 1000;
   user-select: none;
   transition: transform 0.3s ease, opacity 0.3s ease;
