--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -4,7 +4,7 @@
 html, body {
   margin: 0;
   padding: 0;
-  background-color: #f0f8ff;
+  background-color: #e6f0ff;;
 }
 
 // .user-icon {
@@ -136,7 +136,7 @@ html, body {
   display: block;
   object-fit: contain;
   image-rendering: auto;
-  filter: brightness(0.85);
+  filter: brightness(1);
 }
 
 .health-tip-img {
