homepage and basket page updated

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -33,6 +33,16 @@ html, body {
   font-family: "Zain", sans-serif;
 }
 
+.slogan {
+  font-family: 'Comfortaa', sans-serif;
+  font-style: italic;
+  font-size: 1.2rem;
+  font-weight: 500;
+  color: #333;
+  text-align: center;
+  transform: translateY(4px);
+}
+
 .search-bar {
   display: flex;
   align-items: center;
@@ -44,7 +54,7 @@ html, body {
   border: 1px solid #ccc;
   overflow: hidden;
   position: relative;
-  top: 40px;
+  // top: 40px;
   min-height: 60px;
   transition: box-shadow 0.3s ease;
 }
